# digital-tissue

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: deploy.yml
api/: openapi.yaml
api/clients/: python_client_sample.py  vue_client_sample.js
backend/: .env.production  README.md  asgi.py  main.py  pyproject.toml  requirements.txt
backend/adapters/api/: metrics.py
backend/metrics_cache/: a55c8d5fa8.json
backend/src/: config.py  main.py
backend/src/adapters/api/: metrics.py
backend/src/adapters/speckle/: mappers.py  receive_data.py
backend/src/application/: metrics_service.py  metrics_workflow.py  speckle_workflow.py
backend/src/domain/: daylight_potential.py  green_space_index.py  loader.py  metric.py  metrics.json
backend/src/domain/json/: metrics.json  rulebook.json
backend/src/domain/metrics/: carbon_efficiency.py  circulation_efficiency.py  daylight_potential.py  envelope_efficiency.py  green_space_index.py  net_floor_area_ratio.py  occupancy_efficiency.py  program_diversity_index.py
backend/src/domain/model/: enum.py  metric.py  model.py
backend/src/infrastructure/: clerk_auth.py  metrics_storage.py
backend/tests/application/: test_get_latest_version.py  test_receive_data.py
backend/tests/domain/: test_daylight_potential.py  test_green_space_index.py
backend/tests/infrastructure/: test_clerk_auth.py
docs/: AUTHENTICATION-SETUP.md  CLERK-AUTH.md  architecture.md  design.md
frontend/: .env.production  README.md  index.html  package-lock.json  package.json  server.cjs  server.js  vite.config.js
(+41 files in other folders)
