[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.129.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.23.0",
    "specklepy>=3.2.4",
    "uvicorn>=0.40.0",
    "python-jose[cryptography]>=3.3.0",
    "requests>=2.32.0",
    "python-dotenv>=1.0.1",
]
[tool.setuptools.packages.find]
where = ["src"]